// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContinuousDelivery /> Render must match designSystemCore() 1`] = `
<div>
  <div>
    <h2>
      📗 Papillon Ads Implementation
    </h2>
    <h3>
      📖. Design System Core
    </h3>
    <h4>
      📃. Setup file(s)
    </h4>
    <div>
      ﹘ Coming soon.
    </div>
    <h4>
      📃. Knowledge base
    </h4>
    <div>
      ﹘ Coming soon.
    </div>
  </div>
</div>
`;

exports[`<ContinuousDelivery /> Render must match openSourceDependencyProjects() 1`] = `
<div>
  <div>
    <h2>
      📗 Open Source Dependency Projects
    </h2>
    Coming soon...
  </div>
</div>
`;

exports[`<ContinuousDelivery /> Render must match productMicrosites() 1`] = `
<div>
  <div>
    <h2>
      📗 Papillon Ads Implementation
    </h2>
    <h3>
      📖. Product Microsites
    </h3>
    <h4>
      📃. Setup file(s)
    </h4>
    <div>
      ﹘ Coming soon.
    </div>
    <h4>
      📃. Knowledge base
    </h4>
    <div>
      ﹘ Coming soon.
    </div>
  </div>
</div>
`;

exports[`<ContinuousDelivery /> Render must match specificationsStandardsGuidelines() 1`] = `
<div>
  <div>
    <h2>
      📗 Specifications/Standards/Guidelines
    </h2>
    Coming soon...
  </div>
</div>
`;
